[package]
name = "queery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = ["rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
poise = "0.5.5"
dotenvy = "0.15.7"
sqlx = { version = "0.7.2", features = [ "runtime-tokio", "tls-rustls", "postgres", "uuid" ] }
chrono = "0.4.31"
uuid = { version = "1.5.0", features = ["v4"] }
